New Cluster RFQ Sample (#182)
Replaces the Cluster RFQ Sample